# EngiNL

./: .gitignore  CMakeLists.txt  Config.cmake.in  example_script.hpp  main.cpp
src/: AssetManager.cpp  AssetManager.hpp  EngiNL.hpp  Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp  engine.cpp  engine.hpp  entt_include.hpp  export.hpp
src/Component/: custom_script.hpp  custom_script_holder.cpp  custom_script_holder.hpp  sprite_renderer.cpp  sprite_renderer.hpp  transform.hpp
src/Interface/: IScript.cpp  IScript.hpp  iscript.cpp  iscript.hpp
src/Maths/: Vector2.hpp
src/System/: custom_script_system.cpp  custom_script_system.hpp  sprite_renderer_system.cpp  sprite_renderer_system.hpp
